# json-rpc-shell

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  NEWS  README  README.adoc  config.h.in  demo-json-rpc-server.c  json-format.pl  json-rpc-shell.adoc  json-rpc-shell.c  json-rpc-test-server.c  utils.c
cmake/: FindLibEV.cmake  FindLibMagic.cmake
